test/should-fail/缺少endloop.j
function test takes nothing returns nothing
    loop
        loop
        endloop
endfunction
